youtube video change

--- a/css/modified.css
+++ b/css/modified.css
@@ -1,3 +1,5 @@
+/* INFORMATION CARD */
+
 .new-card-container {
   display: flex;
   flex-direction: column;
@@ -31,4 +33,16 @@
   color: #666;
   font-size: 1.5rem;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+}
+
+/* YOUTUBE VIDEO CARD */
+
+.new-video-card-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.new-video-card {
+  display: flex;
+  height: 100%;
 }
